--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Swostitech</title>
+    <title>Swostitech Solution</title>
 </head>
-<title>Dog Pets</title>
+<title>Dog Pets Project</title>
 <body style ="background-color:blue;">
 
     <h1>Dog Pets</h1>
